fix all the test cases and little bit of code clean up